# molecule-proxmox-lxc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
examples/: molecule.yml
src/molecule-proxmox-lxc/: __init__.py
src/molecule-proxmox-lxc/playbooks/: create.yml
src/molecule_proxmox_lxc/: __init__.py  driver.py
src/molecule_proxmox_lxc/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: converge.yml  molecule.yml
src/molecule_proxmox_lxc/playbooks/: destroy.yml
tests/: test_driver.py
